# nfib

./: .gitignore  Makefile  justfile  meson.build  run.sh  test.sh
.devcontainer/: devcontainer.json  postCreate.sh
cli/: meson.build
cli/src/: assertf.h  cli.c  cli.h  csv.c  main.c  run.c  run.h
cli/src/sync/: arc.c  arc.h  channel.c  channel.h  ringbuf.c  ringbuf.h
cli/test/: channel.cpp  cli.cpp  ringbuff.cpp  test.cpp
fib_lib/: meson.build
fib_lib/include/: fib_impl.h  math.h  num.h
fib_lib/src/: fib_impl.c  math.c  num.c
fib_lib/test/: impl.cpp  math.cpp  num.cpp
impls/: justfile
impls/c/: .clang-format  meson.build
impls/c/.cache/clangd/index/: cli.c.6E3788D82EB6E0C8.idx  cli.h.831F8A0D0AEAB65C.idx  impl.c.D27E6E525118D704.idx  impl.h.9249B304AB1498CC.idx  main.c.62FC1DCEBA0C9406.idx  math.c.F020A23C99D413AC.idx  math.h.791175932A76EE7D.idx  (+2 more)
impls/c/src/: cli.c  cli.h  impl.c  impl.h  main.c  num.c
server/: .air.toml  .gitignore  go.mod  go.sum
server/api/: api.go  utils.go
server/cmd/cli/: main.go
server/cmd/web/: main.go
server/data/: fib_impl.go  run_res.go
server/db/: db.go
server/livereload/: livereload.go
server/runner/: runner.go
src/: assert.h  cli.c  cli.h  common.h  csv.h  fibb_impl.c  fibb_impl.h  main.c  num.c  num.h  run.c  run.h
ui/: bun.lockb  index.html  package.json  vite.config.ts
ui/server/: go.mod
ui/server/cmd/cli/: main.go
ui/server/runner/: runner.go
ui/src/: App.svelte  charDataStore.ts  data.ts  livereload.ts  main.ts
ui/src/components/: Chart.svelte  Input.svelte
